[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/Popups/PopupItem_Voodoo.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Interactables/InteractActions/ActionPopupInspect.gd" type="Script" id=2]

[node name="Button" type="TextureButton"]
margin_left = 736.0
margin_top = 48.0
margin_right = 848.0
margin_bottom = 192.0
texture_normal = ExtResource( 1 )
expand = true
script = ExtResource( 2 )
hover_pos = Vector2( 0, 4 )
pressed_size = Vector2( -2, -2 )
dialogue = "This is your VOODOO DOLL. It doesn't seem to do anything when you mess with the pins.

You haven't seen MISS SMITH in quite some time, though. Woops."

[connection signal="button_down" from="." to="." method="_on_Button_down"]
[connection signal="button_up" from="." to="." method="_on_Button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
